[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/player-ship.png" type="Texture" id=1]
[ext_resource path="res://ui/UpgradePanel.gd" type="Script" id=2]

[node name="UpgradePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
cash_amount_text_prefix = "Credits:"

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftSide" type="Control" parent="Container"]
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="ShipTextureRect" type="TextureRect" parent="Container/LeftSide"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="RightSide" type="Control" parent="Container"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container/RightSide"]
anchor_left = 0.25
anchor_top = 0.318
anchor_right = 0.75
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/RightSide/VBoxContainer"]
margin_right = 319.0
margin_bottom = 14.0
text = "Upgrades"
align = 1

[node name="CashAmount" type="Label" parent="Container/RightSide/VBoxContainer"]
margin_top = 18.0
margin_right = 319.0
margin_bottom = 32.0
text = "Credits: 0"
align = 1
valign = 1

[node name="UpgradeButton" type="Button" parent="Container/RightSide/VBoxContainer"]
margin_top = 36.0
margin_right = 319.0
margin_bottom = 56.0
text = "Upgrade"

[connection signal="pressed" from="Container/RightSide/VBoxContainer/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
